syntax = "proto3";
package com.gtel.microservice.product;

option java_multiple_files = true;

option java_package = "com.gtel.product.grpc";
option java_outer_classname = "ProductGrpc";

service ProductGrpcService {
  rpc getProductInfo(GetProductInfoRequest) returns (GetProductResponse);
}

message GetProductInfoRequest{
  int64 productId = 1;
}

message GetProductResponse{
  int32 code = 1;
  string message = 2;
  ProductInfo product = 3;
}

message ProductInfo {
  int64  productId = 1;
  string name = 2;
  int32 status = 3;
  string price = 4;
}